FSPA-291 integrate into load filter

--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -1,11 +1,6 @@
 <div class="autocomplete-filter">
   <div
-    class="infinite-scroll"
-    infinite-scroll
-    [debounce]="debounce"
-    [infiniteScrollDistance]="infiniteScrollDistance"
-    [scrollWindow]="scrollWindow"
-    (scrolled)="onScrolledDown($event)">
+    class="infinite-scroll">
     <bd-input
       sticky
       (valueChange)="onAutocompleteChange($event)"
