--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.scss
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.scss
@@ -5,8 +5,8 @@
   position: relative;
 
   .infinite-scroll {
-    overflow-y: scroll;
-    max-height: $form-control-height * 6 - 1;
+    // overflow-y: scroll;
+    // max-height: $form-control-height * 6 - 1;
     padding-top: 50px;
   }
 
