--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -1,6 +1,7 @@
 <div class="filter-container"
     (clickOutside)="deactivateFilters()">
   <div
+      sticky
       class="filter-header"
       [class.opened]="opened">
     <bd-perfect-scrollbar class="filter-scrollbar">
