--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,21 +1,26 @@
 <multi-pane-layout>
   <first-pane>
-    <div class="data-panel">
-      <div sticky class="bd-filter-container">
-          <filter-container>
-              <autocomplete-filter
-                [itemTemplate]="companyItemTemplate"
-                defaultLabel="Company"
-                valueField="name"
-                [autocompleteSearchSource]="autocompleteSearchSource">
-              </autocomplete-filter>
-              <autocomplete-filter defaultLabel="Drivers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
+    <bd-infinite-scroll (scrolledDown)="onScrolledDown()">
+      <div class="data-panel">
+        <div sticky class="bd-filter-container">
+          <filter-container (stateChange)="onStateChange($event)">
+            <autocomplete-filter
+              [itemTemplate]="companyItemTemplate"
+              [(loadNextPage)]="loadNextPage"
+              defaultLabel="Company"
+              valueField="name"
+              [autocompleteSearchSource]="autocompleteSearchSource">
+            </autocomplete-filter>
+            <autocomplete-filter defaultLabel="Drivers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
           </filter-container>
+        </div>
+        <div [hidden]="isFilterActive">
+          <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
+          </bd-button>
+          <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)'></load-stop-cards>
+        </div>
       </div>
-      <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
-      </bd-button>
-      <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)'></load-stop-cards>
-    </div>
+    </bd-infinite-scroll>
   </first-pane>
 
   <second-pane>
