--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -2,9 +2,15 @@
 $filter-header-max-width: 85px;
 
 .filter-container {
+  z-index: 999;
+  padding-top: 70px;
+
   .filter-header {
-    position: relative;
+    position: absolute;
+    z-index: 999;
+    top: 0;
     display: flex;
+    width: 100%;
     height: 58px;
     padding: 0 $default-margin;
     background: $white;
