--- a/src/app/shared/components/bd-infinite-scroll/bd-infinite-scroll.component.html
+++ b/src/app/shared/components/bd-infinite-scroll/bd-infinite-scroll.component.html
@@ -5,5 +5,5 @@
   [infiniteScrollDistance]="1" 
   [scrollWindow]="false" 
   (scrolled)="onScrolledDown($event)">
-  <ng-content #child></ng-content>
+  <ng-content></ng-content>
 </div>
