FSPA-286 #comment redesign redesign equipment card, fixed customer card styles

--- a/src/app/customers/components/customer-card/customer-card.component.html
+++ b/src/app/customers/components/customer-card/customer-card.component.html
@@ -26,7 +26,7 @@
       <div>{{customer.addresses[0].phone}}</div>
     </div>
     <div class="right">
-        <span [style.background]="customerStatusColor" class="status">{{customerStatusText}}</span>
+        <span [style.background]="customerStatusColor" class="status"></span>
     </div>
   </div>
 </div>
