--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -1,38 +1,31 @@
 <div class="equipment-card-section">
-  <div class="top">
-    <div class="left">
+  <div class="left">
+    <div class="equipment-type-container">
       <span>{{equipmentShortTypeText}}</span>
     </div>
-    <div class="middle">
-      <span>driver</span>
+    <div class="equipment-make">
+      <span>{{equipment.make}}</span>
     </div>
-    <div class="right">
-      <div class="last-tr-city-container">
-        <div class="tr-city">
-          <span style="background: green" class="tr-city-circle"></span>
-          <span class="tr-city-name">TR{{equipment.lastTripNumber}}</span>
-        </div>
-      </div>
-      <div class="last-tr-city-container">
-        <div class="tr-city">
-          <span style="background: red" class="tr-city-circle"></span>
-          <span class="tr-city-name">last city</span>
-        </div>
-      </div>
-    </div>
+    <div>{{equipment.number}}</div>
   </div>
-
-  <div class="bottom">
-    <div class="left">
-      <div class="equipment-make">{{equipment.make}}</div>
-      <div>{{equipment.number}}</div>
-    </div>
-    <div class="middle">
-      <div class="driver-type">{{driverType}}</div>
-      <div>fluids change</div>
-    </div>
-    <div class="right">
-        <span [style.background]="equipmentStatusColor" class="status">{{equipmentStatusText}}</span>
-    </div>
+  <div class="middle">
+    <div class="driver-name">
+    <span>driver</span>
+  </div>
+  <div class="driver-type">
+    <span>{{driverType}}</span>
+  </div>
+  <div class="changes">fluids change</div>
+  </div>
+  <div class="right">
+      <div class="tr-city">
+        <span style="background: rgb(133, 209, 131)" class="tr-city-circle"></span>
+        <span class="tr-city-name">TR{{equipment.lastTripNumber}}</span>
+      </div>
+      <div class="tr-city">
+        <span style="background: red" class="tr-city-circle"></span>
+        <span class="tr-city-name">last city</span>
+  </div>
+      <span [style.background]="equipmentStatusColor" class="status"></span>
   </div>
 </div>
