--- a/src/app/equipment/components/equipment-card/equipment-card.component.scss
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.scss
@@ -1,42 +1,22 @@
 @import '../../../../assets/styles/variables';
-
-:host {
-  background: $white;
-
-  &.active,
-  &:hover {
-    background: $light-blue;
-  }
-
-  &.active {
-    .equipment-card-section {
-      border-bottom-color: $blue;
-    }
-  }
-}
+@import '../../../../assets/styles/mixins';
 
 .equipment-card-section {
   position: relative;
+  display: flex;
   height: 100px;
   padding: $default-margin;
   background: inherit;
   font-size: $tiny-font-size;
+  line-height: 18px;
   cursor: pointer;
   border-bottom: $border;
   justify-content: space-between;
 
-  .bottom,
-  .top {
-    display: flex;
-    justify-content: space-between;
+  .left {
+    flex: 1;
 
-    div {
-      flex: 1;
-    }
-  }
-
-  .top {
-    .left {
+    .equipment-type-container {
       span {
         display: flex;
         width: 34px;
@@ -50,77 +30,102 @@
       }
     }
 
-    .middle {
-      display: flex;
+    .equipment-make {
       overflow: hidden;
-      align-items: flex-end;
-      font-weight: bold;
-      padding-left: $default-margin;
-    }
+      padding-top: 6px;
 
-    .right {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-
-      .last-tr-city-container {
-        .tr-city {
-          display: flex;
-          margin-left: 5px;
-
-          .tr-city-circle {
-            width: 9px;
-            height: 9px;
-            background: $black;
-            margin-top: 3px;
-            border-radius: 50%;
-          }
-
-          .tr-city-name {
-            margin-left: 5px;
-          }
-        }
-      }
-    }
-  }
-
-  .bottom {
-    .left {
-      overflow: hidden;
-
-      .equipment-make {
+      span {
         overflow: hidden;
         font-weight: bold;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
     }
+  }
 
-    .middle {
+  .middle {
+    overflow: hidden;
+    flex: 1;
+    padding-left: $default-margin;
+
+    .driver-name {
+      display: flex;
       overflow: hidden;
-      padding-left: $default-margin;
+      height: 33px;
+      align-items: flex-end;
+      font-weight: bold;
+    }
 
-      .driver-type {
-        overflow: hidden;
-        color: $grey;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+    .driver-type {
+      overflow: hidden;
+      color: $grey;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .changes {
+      font-size: $mini-font-size;
+    }
+  }
+
+  .right {
+    position: relative;
+    flex-direction: column;
+    flex: 1;
+    padding-left: $default-margin;
+
+    .tr-city {
+      display: flex;
+
+      .tr-city-circle {
+        width: 10px;
+        height: 10px;
+        background: $black;
+        margin-top: 3px;
+        border-radius: 50%;
+      }
+
+      .tr-city-name {
+        @include multi-line-ellipsis($line-height: 17px, $line-count: 2, $bg-color: $white);
+        width: 90%;
+        margin-left: 5px;
       }
     }
 
+    .status {
+      position: absolute;
+      right: 0;
+      width: 12px;
+      height: 12px;
+      background: $black;
+      color: $white;
+      bottom: -5px;
+      border-radius: $form-control-height;
+      justify-content: center;
+    }
+  }
+}
+
+:host {
+  background: $white;
+
+  &.active,
+  &:hover {
+    background: $light-blue;
+
     .right {
-      .status {
-        display: flex;
-        width: 79px;
-        height: 20px;
-        background: $black;
-        color: $white;
-        float: right;
-        align-items: center;
-        border-radius: $default-border-radius;
-        justify-content: center;
-        margin-top: $default-margin;
+      .tr-city {
+        .tr-city-name {
+          @include multi-line-ellipsis($line-height: 17px, $line-count: 2, $bg-color: $light-blue);
+          width: 90%;
+        }
       }
+    }
+  }
+
+  &.active {
+    .equipment-card-section {
+      border-bottom-color: $blue;
     }
   }
 }
