FSPA-286 #comment added driver for equipment model, mock data

--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="middle">
     <div class="driver-name">
-    <span>driver</span>
+    <span>{{equipment.driverFirstName}} {{equipment.driverLastName}}</span>
   </div>
   <div class="driver-type">
     <span>{{driverType}}</span>
