--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.scss
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.scss
@@ -7,7 +7,7 @@
 
   bd-input {
     position: absolute;
-    z-index: 100;
+    z-index: $sticked-z-index;
     top: 0;
     display: block;
     width: 100%;
