FSPA-274 remove closing on click ouside

--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -1,5 +1,4 @@
-<div class="filter-container"
-    (clickOutside)="deactivateFilters()">
+<div class="filter-container">
   <div
       sticky
       class="filter-header"
