FSPA-274 return click outside directive

--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -1,4 +1,5 @@
-<div class="filter-container">
+<div class="filter-container"
+  (clickOutside)="deactivateFilters()">
   <div
       sticky
       class="filter-header"
