--- a/src/app/drivers/drivers.html
+++ b/src/app/drivers/drivers.html
@@ -1,1 +1,10 @@
-<messages> </messages>
+<multi-pane-layout>
+  <first-pane>
+    <driver-cards [selected]="selected" (select)='onSelect($event)' [drivers]="items"></driver-cards>
+  </first-pane>
+  <second-pane>
+  </second-pane>
+  <third-pane>
+    <router-outlet></router-outlet>
+  </third-pane>
+</multi-pane-layout>
