FSPA-287 #comment driver status colors

--- a/src/app/drivers/components/driver-card/driver-card.component.html
+++ b/src/app/drivers/components/driver-card/driver-card.component.html
@@ -26,7 +26,7 @@
     <span>Send Message</span>
   </div>
       <span
-      style="background: rgb(133, 209, 131)"
+      [style.background]="driverStatusColor"
       class="status"
       [bd-popover]="driverStatusText"
       [popoverPlacement]="'left'"
