--- a/src/app/drivers/components/driver-card/driver-card.component.scss
+++ b/src/app/drivers/components/driver-card/driver-card.component.scss
@@ -63,6 +63,7 @@
       .tr-city-name {
         @include multi-line-ellipsis($line-height: 17px, $line-count: 2, $bg-color: $white);
         width: 90%;
+        text-align: left;
         margin-left: 5px;
       }
     }
@@ -115,6 +116,7 @@
         .tr-city-name {
           @include multi-line-ellipsis($line-height: 17px, $line-count: 2, $bg-color: $light-blue);
           width: 90%;
+          text-align: left;
         }
       }
     }
