--- a/src/app/auth/forms/login-form/login-form.component.scss
+++ b/src/app/auth/forms/login-form/login-form.component.scss
@@ -5,3 +5,22 @@
 .divider {
   min-height: 20px;
 }
+
+.general-error-message {
+  margin: 15px 0;
+
+  .error-message {
+    display: flex;
+    padding: 5px;
+    background: $light-red;
+    color: $label-warning-color;
+    text-align: left;
+    min-height: 35px;
+    align-items: start;
+
+    i {
+      margin: 2px 15px 0 17px;
+    }
+  }
+}
+
