--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -23,6 +23,6 @@
 </bd-notification-popover>
 
   <span>
-      <i class="icon-user"></i>
+    <a (click)="logout()"><i class="icon-user"></i></a>
   </span>
 </div>
