prepared register structure, added step1 component

--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.html
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.html
@@ -1,5 +1,5 @@
 <div class="bd-switch-container">
-  <div class="bd-switch-label">
+  <div class="bd-switch-label" *ngIf="!hideLabel">
     {{labelText}}
   </div>
   <div class="bd-buttons-container">
