FSPA-290 add new UI for autocomplete filter

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -38,6 +38,7 @@ $btn-primary-focus: $mako;
 $btn-secondary-background: $light-grey;
 $btn-secondary-color: $black;
 
+$disabled-text-color: $grey;
 
 /* placeholder */
 $placeholder-color: $dark-grey;
