--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -12,11 +12,12 @@
   </bd-input>
   <div
     class="autocomplete-section-header">
+    <span *ngIf="selectedItems.length <= 1 && !selectedItemsCache.length">ALL VALUES</span>
     <button
+      *ngIf="selectedItemsCache.length > 1 || selectedItems.length > 1"
       (click)="clearSelectedItems($event)"
-      [disabled]="selectedItems.length < 1">
-      <span *ngIf="selectedItems.length == 0">ALL VALUES</span>
-      <span *ngIf="selectedItems.length > 0">Clear selected items</span>     
+      [disabled]="_btnClearDisabledState">
+      Clear selected items
     </button>
   </div>
   <div *ngIf="isSearchMode">
