--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.scss
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.scss
@@ -31,6 +31,11 @@
       font-size: $default-font-size;
       text-transform: capitalize;
 
+      &:disabled {
+        color: $disabled-text-color;
+        cursor: not-allowed;
+      }
+
       &:focus {
         outline: 0;
       }
