--- a/src/app/drivers/components/driver-cards/driver-cards.component.html
+++ b/src/app/drivers/components/driver-cards/driver-cards.component.html
@@ -1,5 +1,5 @@
 <driver-card
-*ngFor="let driver of this.drivers"
+*ngFor="let driver of this.drivers; trackBy: trackBy;"
 [driver]="driver"
 (select)="onCardSelect($event)"
 >
