--- a/src/app/equipment/components/equipment-cards/equipment-cards.component.html
+++ b/src/app/equipment/components/equipment-cards/equipment-cards.component.html
@@ -1,5 +1,5 @@
 <equipment-card
-  *ngFor="let equipment of this.equipments"
+  *ngFor="let equipment of this.equipments; trackBy: trackBy;"
   [equipment]="equipment"
   (select)="onCardSelect($event)">
 </equipment-card>
