add hover state for filter list item

--- a/src/app/shared/components/filter-container/components/filter-item/filter-item.component.scss
+++ b/src/app/shared/components/filter-container/components/filter-item/filter-item.component.scss
@@ -3,7 +3,11 @@
 .filter-item-container {
   display: flex;
   height: $form-control-height;
-  padding: 0 17px;
+  padding: 0 $default-margin;
   border-bottom: $border;
   align-items: center;
+
+  &:hover {
+    background: $light-blue;
+  }
 }
