change count indicator to blue permanently

--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -68,6 +68,7 @@ $filter-header-max-width: 85px;
 
             &.item-count {
               width: auto;
+              color: $active-color;
             }
           }
         }
