add feature to disable filter tooltip if dropdown is open

--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -14,7 +14,7 @@
           class="filter-item"
           [bd-popover]="filterItemPopover"
           [popoverOnHover]="true"
-          [popoverDisabled]="!filter.selectedItems.length"
+          [popoverDisabled]="!filter.selectedItems.length || opened"
           [class.active]="filter.active">
           <span class="item-name">
             {{filter.tagValue}}
