FSPA-283 hide filter on item click

--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -9,7 +9,8 @@
               [scrolledDown]="scrolledDown"
               defaultLabel="Company"
               valueField="name"
-              [autocompleteSearchSource]="autocompleteSearchSource">
+              [autocompleteSearchSource]="autocompleteSearchSource"
+              (visibilityChange)="onFilterVisibilityChange($event)">
             </autocomplete-filter>
             <autocomplete-filter defaultLabel="Drivers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
             <autocomplete-filter defaultLabel="Drivers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
