FSPA-283 hide filter on item click, and add more space around checkbox

--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -9,8 +9,7 @@
               [scrolledDown]="scrolledDown"
               defaultLabel="Company"
               valueField="name"
-              [autocompleteSearchSource]="autocompleteSearchSource"
-              (visibilityChange)="onFilterVisibilityChange($event)">
+              [autocompleteSearchSource]="autocompleteSearchSource">
             </autocomplete-filter>
             <autocomplete-filter defaultLabel="Drivers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
             <autocomplete-filter defaultLabel="Drivers" valueField="name" [autocompleteSearchSource]="autocompleteSearchSource"></autocomplete-filter>
