FSPA-283 move checkbox style to bd-checkbox

--- a/src/app/shared/components/bd-checkbox/bd-checkbox.component.scss
+++ b/src/app/shared/components/bd-checkbox/bd-checkbox.component.scss
@@ -1,5 +1,9 @@
 @import '../../../../assets/styles/variables';
 
+:host {
+  padding: 10px;
+}
+
 .checkbox-container {
   position: relative;
   overflow: hidden;
