--- a/src/app/shared/components/filter-container/components/filter-item/filter-item.component.scss
+++ b/src/app/shared/components/filter-container/components/filter-item/filter-item.component.scss
@@ -3,9 +3,13 @@
 .filter-item-container {
   display: flex;
   height: $form-control-height;
-  padding: 0 $default-margin;
+  padding-right: $default-margin;
   border-bottom: $border;
   align-items: center;
+
+  bd-form-checkbox {
+    width: $form-control-height;
+  }
 
   &:hover {
     background: $light-blue;
