--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -1,5 +1,6 @@
 <div class="autocomplete-filter">
   <bd-input
+    #bdInput
     (valueChange)="onAutocompleteChange($event)"
     [value]="query"
     placeholder="Enter data">
