FSPA-138 #comment fixed ui remarks

--- a/src/app/customers/components/customer-card/customer-card.component.html
+++ b/src/app/customers/components/customer-card/customer-card.component.html
@@ -26,11 +26,11 @@
       <div>{{customer.addresses[0].phone}}</div>
     </div>
     <div class="right">
+      <span *ngIf="statusText" [style.color]="customerStatusColor" class="status-text">{{customerStatusText}}</span>
         <span
         [style.background]="customerStatusColor"
-        [bd-popover]="customerStatusText"
-        [popoverPlacement]="'left'"
-        [popoverOnHover]="true"
+        (mouseover)="onEnter()"
+        (mouseleave)="onLeave()"
         class="status">
       </span>
     </div>
