--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -51,7 +51,7 @@
     <span class="item-name">{{item.name}}</span>
   </div>
   <div class="right">
-    MC#: {{item.mc}}
+    MC# {{item.mc}}
   </div>
 </div>
   </template>
