--- a/src/app/drivers/components/driver-card/driver-card.component.html
+++ b/src/app/drivers/components/driver-card/driver-card.component.html
@@ -2,6 +2,7 @@
   <div class="left">
     <div>
       <bd-initials-circle
+        class="initials-circle"
         [firstName]="driver.firstName"
         [lastName]="driver.lastName">
       </bd-initials-circle>
@@ -9,9 +10,17 @@
     <div class="driver-full-name">
       <span>{{driver.firstName}} {{driver.lastName}}</span>
     </div>
-    <div>{{driverTypeText}}</div>
+    <div class="driver-type">{{driverTypeText}}</div>
   </div>
   <div class="middle">
+    <div class="driver-phone">
+    <span>{{driver.phone}}</span>
+  </div>
+  <div class="send-message">
+    <span>Send Message</span>
+  </div>
+  </div>
+  <div class="right">
     <div class="tr-city">
       <span style="background: rgb(133, 209, 131)" class="tr-city-circle"></span>
       <span class="tr-city-name">TR{{driver.lastTripNumber}}</span>
@@ -20,20 +29,12 @@
       <span style="background: red" class="tr-city-circle"></span>
       <span class="tr-city-name">{{driver.lastAddress}}</span>
 </div>
-  </div>
-  <div class="right">
-    <div class="driver-phone">
-    <span>{{driver.phone}}</span>
-  </div>
-  <div class="send-message">
-    <span>Send Message</span>
-  </div>
+      <span *ngIf="statusText" [style.color]="driverStatusColor" class="status-text">{{driverStatusText}}</span>
       <span
       [style.background]="driverStatusColor"
-      class="status"
-      [bd-popover]="driverStatusText"
-      [popoverPlacement]="'left'"
-      [popoverOnHover]="true">
+      (mouseover)="onEnter()"
+      (mouseleave)="onLeave()"
+      class="status">
     </span>
   </div>
 </div>
