--- a/src/app/equipment/components/equipment-card/equipment-card.component.scss
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.scss
@@ -14,7 +14,13 @@
   justify-content: space-between;
 
   .left {
-    flex: 1;
+    width: 30%;
+
+    .initials-circle {
+      /deep/ .circle {
+        margin-top: -6px;
+      }
+    }
 
     .equipment-make {
       overflow: hidden;
@@ -30,9 +36,12 @@
   }
 
   .middle {
-    overflow: hidden;
-    flex: 1;
-    padding-left: $default-margin;
+    display: flex;
+    width: 30%;
+    height: 70px;
+    padding-left: 17px;
+    flex-direction: column;
+    justify-content: flex-end;
 
     .driver-name {
       display: flex;
@@ -44,21 +53,24 @@
 
     .driver-type {
       overflow: hidden;
-      color: $grey;
       text-overflow: ellipsis;
       white-space: nowrap;
     }
 
     .changes {
+      overflow: hidden;
       font-size: $mini-font-size;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 
   .right {
     position: relative;
+    width: 40%;
     flex-direction: column;
-    flex: 1;
     padding-left: $default-margin;
+    padding-top: 1px;
 
     .tr-city {
       display: flex;
@@ -73,9 +85,16 @@
 
       .tr-city-name {
         @include multi-line-ellipsis($line-height: 17px, $line-count: 2, $bg-color: $white);
-        width: 90%;
+        width: 80%;
+        text-align: left;
         margin-left: 5px;
       }
+    }
+
+    .status-text {
+      position: absolute;
+      right: 17px;
+      bottom: -8px;
     }
 
     .status {
@@ -87,7 +106,6 @@
       color: $white;
       bottom: -5px;
       border-radius: $form-control-height;
-      justify-content: center;
     }
   }
 }
@@ -103,7 +121,8 @@
       .tr-city {
         .tr-city-name {
           @include multi-line-ellipsis($line-height: 17px, $line-count: 2, $bg-color: $light-blue);
-          width: 90%;
+          width: 80%;
+          text-align: left;
         }
       }
     }
