--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -11,21 +11,24 @@
           <span class="item-count" *ngIf="filter.count > 1">
             +{{filter.count - 1}}
           </span>
-
-          </span>
+        </span>
       </div>
     </bd-perfect-scrollbar>
+    <bd-popover-content 
+      #filterItemPopover
+      placement="bottom"
+      [width]="220"
+      [offsetParent]="popoverParent"
+      [closeOnMouseOutside]="true"
+      [horizontalOffset]="-5">
+      <div class="selected-items" *ngIf="_hoveredFilter">
+        <p class="selected-item" *ngFor="let item of _hoveredFilter.selectedItems">
+          {{item.name}}
+        </p>
+      </div>
+    </bd-popover-content>
   </div>
   <div class="filter-content">
     <ng-content></ng-content>
   </div>
 </div>
-
-<bd-popover-content #filterItemPopover placement="bottom" [width]="220" [offsetParent]="popoverParent" [closeOnMouseOutside]="true"
-  [horizontalOffset]="-5">
-  <div class="selected-items" *ngIf="_hoveredFilter">
-    <p class="selected-item" *ngFor="let item of _hoveredFilter.selectedItems">
-      {{item.name}}
-    </p>
-  </div>
-  </bd-popover-content>
