--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -13,9 +13,9 @@
   </bd-input>
   <div
     class="autocomplete-section-header">
-    <span *ngIf="selectedItems.length <= 1 && !selectedItemsCache.length">ALL VALUES</span>
+    <span *ngIf="!selectedItems.length && !selectedItemsCache.length">ALL VALUES</span>
     <button
-      *ngIf="selectedItemsCache.length > 1 || selectedItems.length > 1"
+      *ngIf="selectedItemsCache.length || selectedItems.length"
       (click)="clearSelectedItems($event)"
       [disabled]="isClearButtonDisabled">
       Clear selected items
